--- a/SCM_Water_Back/src/main/resources/templates/repertorys.html
+++ b/SCM_Water_Back/src/main/resources/templates/repertorys.html
@@ -159,7 +159,7 @@
               </table>
             </div>
         </fieldset>
-        <div class="layui-btn-group" style="display: block;">
+        <div class="layui-btn-group" style="display: block;text-align: center;">
 					<a th:href="@{commoditySelect}+'?num='+${commodityPageInfos.firstPage}"><button th:onclick="'window.location.href='+@{commoditySelect}+'?num='+${commodityPageInfos.firstPage}" class="layui-btn">首页</button></a>
 					<a th:href="@{commoditySelect}+'?num='+${commodityPageInfos.prePage}"><button th:onclick="'window.location.href='+@{commoditySelect}+'?num='+${commodityPageInfos.prePage}" class="layui-btn">上一页</button></a>
 					<a th:href="@{commoditySelect}+'?num='+${commodityPageInfos.nextPage}"><button th:onclick="'window.location.href='+@{commoditySelect}+'?num='+${commodityPageInfos.nextPage}"  class="layui-btn">下一页</button></a>
