--- a/SCM_Water_Back/src/main/resources/templates/deliverySelect_zf.html
+++ b/SCM_Water_Back/src/main/resources/templates/deliverySelect_zf.html
@@ -23,12 +23,10 @@
                       <col>
                   </colgroup>
                   <thead>
-                       <tr>
-                      <!-- <th th:text="${id}"> </th> -->
+                      <tr>
                       <th>员工编号</th>
                       <th>派送员</th>
                       <th>状态</th>
-
                       <th style="text-align:center;">操作</th>
                       </tr> 
                   </thead>
@@ -36,41 +34,21 @@
                     <td th:text="${entries.deliverynumber}"></td>
                     <td th:text="${entries.deliverypersonnel}"></td>
                     <td th:text="${entries.deliverystate}"></td>
-                    <td class="text-center">
-                           <div class="layui-btn-group">
-                              <button class="layui-btn layui-btn-xs layui-btn-normal dw-dailog" th:dw-url="DeliveryOrder"  dw-title="编辑用户">
+                    <input type="hidden" th:value="${session.id}" name="id"/>
+                    
+                     <td class="text-center">
+                          <div class="layui-btn-group">
+                              <button class="layui-btn layui-btn-xs layui-btn-normal dw-dailog" th:dw-url="'deliveryid?id='+${session.id}"  dw-title="编辑用户">
                                 <i class="layui-icon">&#xe642;</i>派送
                               </button>
                             </div>
-                      </td> 
+                      </td>
+                    
                   </tr>  
                   </th:block>
                   <tbody>
                   </tbody>
               </table>
-			<!-- 		--------------------------------------------------------------- -->
-                   <!--    <thead>
-                      <tr>
-                      <th>员工编号</th>
-                      <th>派送员</th>
-                      <th>状态</th>
-                      <th style="text-align:center;">操作</th>
-                      </tr> 
-                      </thead>
-                 <tr th:each="entries,stat:${lis}">
-                 <td th:text="${entries.deliverypersonnel}"></td>
-                 <td class="text-center">
-                           <div class="layui-btn-group">
-                              <button class="layui-btn layui-btn-xs layui-btn-normal dw-dailog" th:dw-url="DeliveryOrder"  dw-title="编辑用户">
-                                <i class="layui-icon">&#xe642;</i>派送
-                              </button>
-                            </div>
-                      </td> 
-                  </tr>  
-                  </th:block>
-                  <tbody>
-                  </tbody> -->
-						       
 					</form>
 				</div>
 			</fieldset>
@@ -81,46 +59,7 @@
 <script type="text/javascript" src="./layui/layui.js"></script>
 <script type="text/javascript" src="./javascript/dw_form_submit.js"></script>
 <script type="text/javascript">
-	 function Update() {
-		var form = new FormData(document.getElementById("Update"));
-		$.ajax({
-			url : "UserUp",
-			type : "post",
-			data : form,
-			processData : false,
-			contentType : false,
-			success : function(data) {
-				if (data > 0) {
-					parent.layer.close(1);
-					window.parent.location.reload();
-					location.href = "customer";
-				}
-			},
-			error : function(e) {
-			}
-		});
-	}
 	 
-	 
-	 function confirm() {
-		var id = $("input[name='id']").val();
-		var status = "已接单";
-	 	$.ajax({
-			url : "OrderSeleId?id="+id+"&status="+status,
-			type : "post",
-			processData : false,
-			contentType : false,
-			success : function(data) {
-				if (data > 0) {
-					parent.layer.close(1);
-					window.parent.location.reload();
-					location.href = "order";
-				}
-			},
-			error : function(e) {
-			}
-		});
-	}
 </script>
 </body>
 </html>
