--- a/SCM_Water_Back/src/main/resources/templates/index.html
+++ b/SCM_Water_Back/src/main/resources/templates/index.html
@@ -54,20 +54,19 @@
                 <dd><a href="orderAlready">待办任务</a></dd>
             </dl>
         </li>
-        <li class="layui-nav-item">
-            <a href="javascript:;">仓库管理</a>
-            <dl class="layui-nav-child">
-                <dd><a href="rule.html">仓库</a></dd>
-                <dd><a href="role.html">进货</a></dd>
-            </dl>
-        </li>
+     <li class="layui-nav-item layui-nav-itemed">
+                <a href="javascript:;">仓库管理</a>
+                <dl class="layui-nav-child">
+                    <dd><a class="layui-this" href="repertoryParticulars">仓库详情</a></dd>
+                    <dd><a class="layui-this" href="commoditys">商品管理</a></dd>
+                </dl>
+            </li>
         <li class="layui-nav-item">
             <a href="javascript:;">统计信息</a>
             <dl class="layui-nav-child">
-                <dd><a href="rule.html">现金统计</a></dd>
-                <dd><a href="role.html">订单统计</a></dd>
-                <dd><a href="adminRole.html">商品统计</a></dd>
-                  <dd><a href="adminRole.html">退货原因统计</a></dd>
+                <dd><a href="echartsTests">统计</a></dd>
+                <!-- <dd><a href="control.html">商品统计</a></dd>
+                <dd><a href="control.html">退单原因统计</a></dd> -->
             </dl>
         </li>
       </ul>
